[gd_scene load_steps=9 format=3 uid="uid://ciybv5kjembew"]

[ext_resource type="Script" uid="uid://c546xootd55ap" path="res://SG/Scripts/timed_button.gd" id="1_fgkau"]
[ext_resource type="Texture2D" uid="uid://2luk5mmlr511" path="res://Assets/Pawan/Tilemaps_00.png" id="2_spj4i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fgkau"]
atlas = ExtResource("2_spj4i")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_spj4i"]
atlas = ExtResource("2_spj4i")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sldaq"]
atlas = ExtResource("2_spj4i")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgxh5"]
atlas = ExtResource("2_spj4i")
region = Rect2(0, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_b7omo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgkau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spj4i")
}],
"loop": false,
"name": &"Press Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sldaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgxh5")
}],
"loop": false,
"name": &"Press Up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_325b4"]
size = Vector2(98, 96)

[node name="Timed_Button" type="Area2D"]
collision_mask = 3
script = ExtResource("1_fgkau")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_b7omo")
animation = &"Press Down"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_325b4")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
